# InteractiveLidarSegmentation

./: .gitmodules  CMakeLists.txt  Difference.cpp  Difference.h  Difference.hpp  Helpers.cpp  Helpers.h  Helpers.hpp  Helpers.txx  ImageGraphCut.cxx  ImageGraphCut.h  InteractiveLidarSegmentation.cpp  InteractorStyleScribble.cxx  InteractorStyleScribble.h  Legacy.cxx  LidarSegmentationWidget.cpp  LidarSegmentationWidget.h  LidarSegmentationWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NonInteractive.cpp  README.txt  StructurePropagationBase.h  TabLayout.ui  Types.h  vtkScribbleInteractorStyle.cxx  vtkScribbleInteractorStyle.h
Documentation/: InteractiveImageGraphCutSegmentation.brf  InteractiveImageGraphCutSegmentation.tex
data/: dave.mhd  dave.raw
old/: Difference.cpp  Difference.h  DifferenceManual.cpp  DifferenceManual.h  ImageGraphCutBase.cpp  ImageGraphCutBase.h  InnerWidget.cxx  InnerWidget.h  InteractorStyleScribble.h  ProgressThread.cpp
